--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Utilly</title>
 </head>
 
-<body>
+<body style="color: rgb(255, 255, 255); background-color: rgb(44, 47, 51);">
     <h1 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Welcome to Utilly!</span></h1>
     <p style="text-align: center;"><a href="https://discordapp.com/oauth2/authorize?client_id=716530326662545450&scope=bot&permissions=355439" style="text-decoration: none; background-color: #43B581; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"><span style="font-family: Arial, Helvetica, sans-serif;">Invite Utilly</span></a></p>
     <p style="text-align: center;"><a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" style="text-decoration: none; background-color: #43B581; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;" target="_blank"><span style="font-family: Arial, Helvetica, sans-serif;">Join support server</span></a></p>
