--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <td style="width: 33.3333%;"><strong>Required permission(s):</strong></td>
             </tr>
             <tr>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">&gt;help</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">Shows a help menu</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">None</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;help</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Shows a help menu</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
             </tr>
             <tr>
                 <td style="width: 33.3333%;">&gt;guildid (&gt;guild-id)</td>
@@ -30,9 +30,9 @@
                 <td style="width: 33.3333%;">None</td>
             </tr>
             <tr>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">&gt;serverinfo (&gt;server-info)</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">Gives info about the server</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">None</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;serverinfo (&gt;server-info)</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Gives info about the server</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
             </tr>
             <tr>
                 <td style="width: 33.3333%;">&gt;myinfo</td>
@@ -40,9 +40,9 @@
                 <td style="width: 33.3333%;">None</td>
             </tr>
             <tr>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">&gt;info {@user}</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">Gives info about {@user}</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">None</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;info {@user}</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Gives info about {@user}</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
             </tr>
             <tr>
                 <td style="width: 33.3333%;">&gt;invite</td>
@@ -50,9 +50,9 @@
                 <td style="width: 33.3333%;">None</td>
             </tr>
             <tr>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">&gt;invitestudio (&gt;is) [MaxUses] [Age]</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">Creates an invite to the current channel</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">None</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;invitestudio (&gt;is) [MaxUses] [Age]</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Creates an invite to the current channel</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
             </tr>
             <tr>
                 <td style="width: 33.3333%;">&gt;ping</td>
@@ -60,9 +60,9 @@
                 <td style="width: 33.3333%;">None</td>
             </tr>
             <tr>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">&gt;leave</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">Leave the current server</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">None</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;leave</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Leave the current server</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
             </tr>
             <tr>
                 <td style="width: 33.3333%;">&gt;channel-info (&gt;ci, &gt;channelinfo)</td>
@@ -70,9 +70,9 @@
                 <td style="width: 33.3333%;">None</td>
             </tr>
             <tr>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">&gt;kick {@user} [reason]</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">Kicks {@user} for [reason]</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">kick_members</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;kick {@user} [reason]</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Kicks {@user} for [reason]</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">kick_members</td>
             </tr>
             <tr>
                 <td style="width: 33.3333%;">&gt;ban {@user} [reason]</td>
@@ -80,9 +80,9 @@
                 <td style="width: 33.3333%;">ban_members</td>
             </tr>
             <tr>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">&gt;purge (&gt;clear) [amount]</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">Clears [amount] messages</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">manage_messages</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;purge (&gt;clear) [amount]</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Clears [amount] messages</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">manage_messages</td>
             </tr>
             <tr>
                 <td style="width: 33.3333%;">&gt;nuke</td>
@@ -90,19 +90,13 @@
                 <td style="width: 33.3333%;">manage_messages</td>
             </tr>
             <tr>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">&gt;slowmode {amount}</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">Sets the slowmode to {amount} seconds, 0 to turn it off</td>
-                <td style="width: 33.3333%; background-color: rgb(153, 170, 181);">manage_channels</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;slowmode {amount}</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Sets the slowmode to {amount} seconds, 0 to turn it off</td>
+                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">manage_channels</td>
             </tr>
         </tbody>
     </table>
     <p><span style="font-family: Arial, Helvetica, sans-serif;">*Messages older then 2 weeks can&#39;t be deleted because of the Discord API</span></p>
     <hr>
     <h2 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Contact</span></h2>
-    <p style="text-align: center;"><span style="font-family: Arial, sans-serif; color: rgb(255, 255, 255); font-weight: normal; text-align: center; background-color: rgb(114, 137, 218); text-decoration: none; border: none; border-radius: 5px; display: inline-block; font-size: 16px; line-height: 1.5em;">&nbsp; <a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" style="16px; font-family: Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #7289da; text-decoration: none; border: none; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; display: inline-block;" target="_blank"><strong>Join Discord</strong></a> &nbsp;</span><a href="https://discord.gg/FVczWXP" target="_blank"></a></p>
-    <p style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Always want to stay in touch with Utilly?</span> <span style="font-family: Arial, Helvetica, sans-serif;">Join <a href="https://discord.gg/g5pw763" rel="noopener noreferrer" target="_blank"><span style="color: rgb(84, 172, 210);">this server</span></a>!</span></p>
-    <p style="text-align: center;"><a href="https://discord.gg/FVczWXP" target="_blank"></a></p>
-    <p style="text-align: center;"><a href="mailto:dante_nl@icloud.com" style="text-decoration: none; background-color: #54C3A6; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"><span style="font-family: Arial, Helvetica, sans-serif;">Send an e-mail</span></a></p>
-</body>
-
-</html>
+    <p style="text-align: center;"><span style="font-family: Arial, sans-serif; color: rgb(255, 255, 255); font-weight: normal; text-align: center; background-color: rgb(114, 137, 218); text-decoration: none; border: none; border-radius: 5px; display: inline-block; font-size: 16px; line-height: 1.5em;">&nbsp; <a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" style="16px; font-family: Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #7289da; text-decoration: none; border: none; -webkit-border-radius: 5px; -moz-
