--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
     <title>Utilly</title>
+    <title>Utilly</title>
 </head>
 
 <body style="color: rgb(255, 255, 255); background-color: rgb(44, 47, 51);">
     <h1 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Welcome to Utilly!</span></h1>
     <p style="text-align: center;"><a href="https://discordapp.com/oauth2/authorize?client_id=716530326662545450&scope=bot&permissions=355439" style="text-decoration: none; background-color: #43B581; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"><span style="font-family: Arial, Helvetica, sans-serif;">Invite Utilly</span></a></p>
-    <p style="text-align: center;"><a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" style="text-decoration: none; background-color: #43B581; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;" target="_blank"><span style="font-family: Arial, Helvetica, sans-serif;">Join support server</span></a></p>
+    <p style="text-align: center;"><span style="text-decoration: none; background-color: rgb(67, 181, 129); color: rgb(255, 255, 255); display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px; font-family: Arial, Helvetica, sans-serif;"><a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" style="text-decoration: none; background-color: #43B581; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;" target="_blank">Join support server</a></span></p>
+  <body style="color: rgb(255, 255, 255); background-color: rgb(44, 47, 51);">
+    <p style="text-align: center;"><span style="text-decoration: none; background-color: rgb(84, 195, 166); color: rgb(255, 255, 255); display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px; font-family: Arial, Helvetica, sans-serif;"><a href="https://utilly.netlify.app/official" style="text-decoration: none; background-color: #54C3A6; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Visit Utilly Official&#39;s site</a></span></p>
     <hr>
     <h2 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Commands</span></h2>
     <p><span style="font-family: Arial, Helvetica, sans-serif;">Variables are indicated with {what-to-fill-in}, optional variables with [what-to-fill-in]</span></p>
