--- a/index.html
+++ b/index.html
@@ -3,108 +3,142 @@
 
 <head>
     <title>Utilly</title>
-    <title>Utilly</title>
+    <style type="text/css">
+        <!-- 
+        #navbar ul {
+            margin: 0;
+            padding: 5px;
+            list-style-type: none;
+            text-align: center;
+            background-color: #23272A;
+        }
+
+        #navbar ul li {
+            display: inline;
+        }
+
+        #navbar ul li a {
+            text-decoration: none;
+            padding: .2em 1em;
+            color: #fff;
+            background-color: #23272A;
+        }
+
+        #navbar ul li a:hover {
+            color: #000;
+            background-color: #7289DA;
+        }
+        -->
+    </style>
 </head>
 
 <body style="color: rgb(255, 255, 255); background-color: rgb(44, 47, 51);">
-    <h1 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Welcome to Utilly!</span></h1>
-    <p style="text-align: center;"><a href="https://discordapp.com/oauth2/authorize?client_id=716530326662545450&scope=bot&permissions=355439" style="text-decoration: none; background-color: #43B581; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"><span style="font-family: Arial, Helvetica, sans-serif;">Invite Utilly</span></a></p>
-    <p style="text-align: center;"><span style="text-decoration: none; background-color: rgb(67, 181, 129); color: rgb(255, 255, 255); display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px; font-family: Arial, Helvetica, sans-serif;"><a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" style="text-decoration: none; background-color: #43B581; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;" target="_blank">Join support server</a></span></p>
-  <body style="color: rgb(255, 255, 255); background-color: rgb(44, 47, 51);">
-    <p style="text-align: center;"><span style="text-decoration: none; background-color: rgb(84, 195, 166); color: rgb(255, 255, 255); display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px; font-family: Arial, Helvetica, sans-serif;"><a href="https://utilly.netlify.app/official" style="text-decoration: none; background-color: #54C3A6; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Visit Utilly Official&#39;s site</a></span></p>
-    <hr>
-    <h2 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Commands</span></h2>
-    <p><span style="font-family: Arial, Helvetica, sans-serif;">Variables are indicated with {what-to-fill-in}, optional variables with [what-to-fill-in]</span></p>
-    <table style="width: 100%; font-family: Arial, Helvetica, sans-serif; border-collapse: collapse;">
-        <tbody>
-            <tr>
-                <td style="width: 33.3333%;"><strong><span style="font-family: Arial, Helvetica, sans-serif;">Command:</span></strong></td>
-                <td style="width: 33.3333%;"><strong><span style="font-family: Arial, Helvetica, sans-serif;">Description:</span></strong></td>
-                <td style="width: 33.3333%;"><strong>Required permission(s):</strong></td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;help</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Shows a help menu</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%;">&gt;guildid (&gt;guild-id)</td>
-                <td style="width: 33.3333%;">Gives the guild ID from the server</td>
-                <td style="width: 33.3333%;">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;serverinfo (&gt;server-info)</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Gives info about the server</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%;">&gt;myinfo</td>
-                <td style="width: 33.3333%;">Gives info about you</td>
-                <td style="width: 33.3333%;">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;info {@user}</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Gives info about {@user}</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%;">&gt;invite</td>
-                <td style="width: 33.3333%;">Says an invite for Utilly</td>
-                <td style="width: 33.3333%;">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;invitestudio (&gt;is) [MaxUses] [Age]</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Creates an invite to the current channel</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%;">&gt;ping</td>
-                <td style="width: 33.3333%;">Gives Utilly&#39;s latency in ms</td>
-                <td style="width: 33.3333%;">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;leave</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Leave the current server</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%;">&gt;channel-info (&gt;ci, &gt;channelinfo)</td>
-                <td style="width: 33.3333%;">Gives information about the current channel</td>
-                <td style="width: 33.3333%;">None</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;kick {@user} [reason]</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Kicks {@user} for [reason]</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">kick_members</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%;">&gt;ban {@user} [reason]</td>
-                <td style="width: 33.3333%;">Bans {@user} for [reason]</td>
-                <td style="width: 33.3333%;">ban_members</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;purge (&gt;clear) [amount]</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Clears [amount] messages</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">manage_messages</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%;">&gt;nuke</td>
-                <td style="width: 33.3333%;">Clears all messages in a channel*</td>
-                <td style="width: 33.3333%;">manage_messages</td>
-            </tr>
-            <tr>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;slowmode {amount}</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Sets the slowmode to {amount} seconds, 0 to turn it off</td>
-                <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">manage_channels</td>
-            </tr>
-        </tbody>
-    </table>
-    <p><span style="font-family: Arial, Helvetica, sans-serif;">*Messages older then 2 weeks can&#39;t be deleted because of the Discord API</span></p>
-    <hr>
-    <h2 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Contact</span></h2>
-    <p style="text-align: center;"><span style="font-family: Arial, sans-serif; color: rgb(255, 255, 255); font-weight: normal; text-align: center; background-color: rgb(114, 137, 218); text-decoration: none; border: none; border-radius: 5px; display: inline-block; font-size: 16px; line-height: 1.5em;">&nbsp; <a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" style="16px; font-family: Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #7289da; text-decoration: none; border: none; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; display: inline-block;" target="_blank"><strong>Join Discord</strong></a> &nbsp;</span><a href="https://discord.gg/FVczWXP" target="_blank"></a></p>
-    <p style="text-align: center;"><a href="https://discord.gg/g5pw763" style="text-decoration: none; background-color: #7289da; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"><span style="font-family: Arial, Helvetica, sans-serif;">Join Utilly | Stay Connected</span></a></p>
-    <p style="text-align: center;"><a href="mailto:dante_nl@icloud.com" style="text-decoration: none; background-color: #54C3A6; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"><span style="font-family: Arial, Helvetica, sans-serif;">Send an e-mail</span></a></p>
+    <div id="navbar">
+        <ul>
+            <li><a href="https://discordapp.com/oauth2/authorize?client_id=716530326662545450&scope=bot&permissions=355439" rel="noopener noreferrer" target="_blank"><span style="font-family: Arial, Helvetica, sans-serif;">Invite Utilly</span></a></li>
+            <li><span style="font-family: Arial, Helvetica, sans-serif;"><a href="http://utilly.netlify.com/official" rel="noopener noreferrer" target="_blank">Utilly Official</a></span></li>
+            <li><span style="font-family: Arial, Helvetica, sans-serif;"><a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" target="_blank">Join Discord</a></span></li>
+            
+        </ul>
+        <h1 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Welcome to Utilly!</span></h1>
+        <h3 style="text-align: center;"><a href="https://discordapp.com/oauth2/authorize?client_id=716530326662545450&scope=bot&permissions=355439" rel="noopener noreferrer" style="text-decoration: none; background-color: #43B581; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;" target="_blank"><span style="font-family: Arial, Helvetica, sans-serif;">Invite Utilly</span></a></h3>
+        <p style="text-align: center;"><span style="text-decoration: none; background-color: rgb(67, 181, 129); color: rgb(255, 255, 255); display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px; font-family: Arial, Helvetica, sans-serif;"><a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" style="text-decoration: none; background-color: #43B581; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;" target="_blank">Join support server</a></span></p>
+        <p style="text-align: center;"><span style="text-decoration: none; background-color: rgb(84, 195, 166); color: rgb(255, 255, 255); display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px; font-family: Arial, Helvetica, sans-serif;"><a href="https://utilly.netlify.app/official" style="text-decoration: none; background-color: #54C3A6; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Visit Utilly Official&#39;s site</a></span></p>
+        <hr>
+        <h2 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Commands</span></h2>
+        <p><span style="font-family: Arial, Helvetica, sans-serif;">Variables are indicated with {what-to-fill-in}, optional variables with [what-to-fill-in]</span></p>
+        <table style="width: 100%; font-family: Arial, Helvetica, sans-serif; border-collapse: collapse;">
+            <tbody>
+                <tr>
+                    <td style="width: 33.3333%;"><strong><span style="font-family: Arial, Helvetica, sans-serif;">Command:</span></strong></td>
+                    <td style="width: 33.3333%;"><strong><span style="font-family: Arial, Helvetica, sans-serif;">Description:</span></strong></td>
+                    <td style="width: 33.3333%;"><strong>Required permission(s):</strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;help</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Shows a help menu</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%;">&gt;guildid (&gt;guild-id)</td>
+                    <td style="width: 33.3333%;">Gives the guild ID from the server</td>
+                    <td style="width: 33.3333%;">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;serverinfo (&gt;server-info)</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Gives info about the server</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%;">&gt;myinfo</td>
+                    <td style="width: 33.3333%;">Gives info about you</td>
+                    <td style="width: 33.3333%;">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;info {@user}</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Gives info about {@user}</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%;">&gt;invite</td>
+                    <td style="width: 33.3333%;">Says an invite for Utilly</td>
+                    <td style="width: 33.3333%;">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;invitestudio (&gt;is) [MaxUses] [Age]</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Creates an invite to the current channel</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%;">&gt;ping</td>
+                    <td style="width: 33.3333%;">Gives Utilly&#39;s latency in ms</td>
+                    <td style="width: 33.3333%;">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;leave</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Leave the current server</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%;">&gt;channel-info (&gt;ci, &gt;channelinfo)</td>
+                    <td style="width: 33.3333%;">Gives information about the current channel</td>
+                    <td style="width: 33.3333%;">None</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;kick {@user} [reason]</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Kicks {@user} for [reason]</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">kick_members</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%;">&gt;ban {@user} [reason]</td>
+                    <td style="width: 33.3333%;">Bans {@user} for [reason]</td>
+                    <td style="width: 33.3333%;">ban_members</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;purge (&gt;clear) [amount]</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Clears [amount] messages</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">manage_messages</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%;">&gt;nuke</td>
+                    <td style="width: 33.3333%;">Clears all messages in a channel*</td>
+                    <td style="width: 33.3333%;">manage_messages</td>
+                </tr>
+                <tr>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">&gt;slowmode {amount}</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">Sets the slowmode to {amount} seconds, 0 to turn it off</td>
+                    <td style="width: 33.3333%; background-color: rgb(76, 81, 87);">manage_channels</td>
+                </tr>
+            </tbody>
+        </table>
+        <p><span style="font-family: Arial, Helvetica, sans-serif;">*Messages older then 2 weeks can&#39;t be deleted because of the Discord API</span></p>
+        <hr>
+        <h2 style="text-align: center;"><span style="font-family: Arial, Helvetica, sans-serif;">Contact</span></h2>
+        <p style="text-align: center;"><span style="font-family: Arial, sans-serif; color: rgb(255, 255, 255); font-weight: normal; text-align: center; background-color: rgb(114, 137, 218); text-decoration: none; border: none; border-radius: 5px; display: inline-block; font-size: 16px; line-height: 1.5em;">&nbsp; <a href="https://discord.gg/FVczWXP" rel="noopener noreferrer" style="16px; font-family: Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #7289da; text-decoration: none; border: none; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; display: inline-block;" target="_blank"><strong>Join Discord</strong></a> &nbsp;</span><a href="https://discord.gg/FVczWXP" target="_blank"></a></p>
+        <p style="text-align: center;"><a href="https://discord.gg/g5pw763" style="text-decoration: none; background-color: #7289da; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"><span style="font-family: Arial, Helvetica, sans-serif;">Join Utilly | Stay Connected</span></a></p>
+        <p style="text-align: center;"><a href="mailto:dante_nl@icloud.com" style="text-decoration: none; background-color: #54C3A6; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"><span style="font-family: Arial, Helvetica, sans-serif;">Send an e-mail</span></a></p>
+        <p><br></p>
+    </div>
 </body>
 
 </html>
