--- a/invites.html
+++ b/invites.html
@@ -9,24 +9,24 @@
     <h1 style="text-align: center;">Utilly Invites</h1>
     <h2 style="text-align: center;"><a href="https://discord.com/oauth2/authorize?client_id=718729552372826182&permissions=289919&redirect_uri=https://utilly.netlify.com/invites&response_type=code&scope=bot" rel="noopener noreferrer" style="16px; font-family: Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #7289da; text-decoration: none; border: none; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; display: inline-block;" target="_blank"><span style="font-size: 16px; font-family: Arial, sans-serif; color: #ffffff; font-weight:normal; line-height:1.5em; text-align:center;"><strong>&nbsp;Invite Utilly Invites&nbsp;</strong></span></a></h2>
     <h3 style="text-align: center;">Suggestions for Utilly Invites bots? Leave them here</h3>
-    <p style="text-align: center;"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSel9Q1Ut_kJhm7RINztTFejWJuoNnmnLuj2MF7JNDJxozfxuQ/viewform?embedded=true" width="600" height="1000" frameborder="0">Laden…</iframe></p>
+    <p style="text-align: left;"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSel9Q1Ut_kJhm7RINztTFejWJuoNnmnLuj2MF7JNDJxozfxuQ/viewform?embedded=true" width="1000" height="1000" frameborder="0">Laden…</iframe></p>
     <table style="width: 100%;">
         <tbody>
             <tr>
-                <td style="width: 50.0000%;"><strong>Command</strong><br></td>
-                <td style="width: 50.0000%;"><strong>Description</strong><br></td>
+                <td style="width: 50.0000%;"><strong>Command</strong></td>
+                <td style="width: 50.0000%;"><strong>Description</strong></td>
             </tr>
             <tr>
-                <td style="width: 50.0000%;">&lt;help</td>
-                <td style="width: 50.0000%;">Shows a help menu</td>
+                <td style="width: 50%; background-color: rgb(76, 81, 87);">&lt;help</td>
+                <td style="width: 50%; background-color: rgb(76, 81, 87);">Shows a help menu</td>
             </tr>
             <tr>
                 <td style="width: 50.0000%;">&lt;bots</td>
                 <td style="width: 50.0000%;">Gives a list of bots that you can invite</td>
             </tr>
             <tr>
-                <td style="width: 50.0000%;">&lt;createinvite {ID}</td>
-                <td style="width: 50.0000%;">Create an invite with administrator permissions</td>
+                <td style="width: 50%; background-color: rgb(76, 81, 87);">&lt;createinvite {ID}</td>
+                <td style="width: 50%; background-color: rgb(76, 81, 87);">Create an invite with administrator permissions</td>
             </tr>
         </tbody>
     </table>
