--- a/invites.html
+++ b/invites.html
@@ -9,7 +9,7 @@
     <h1 style="text-align: center;">Utilly Invites</h1>
     <h2 style="text-align: center;"><a href="https://discord.com/oauth2/authorize?client_id=718729552372826182&permissions=289919&redirect_uri=https://utilly.netlify.com/invites&response_type=code&scope=bot" rel="noopener noreferrer" style="16px; font-family: Arial, sans-serif; color: #ffffff; font-weight:normal; text-align:center; background-color: #7289da; text-decoration: none; border: none; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; display: inline-block;" target="_blank"><span style="font-size: 16px; font-family: Arial, sans-serif; color: #ffffff; font-weight:normal; line-height:1.5em; text-align:center;"><strong>&nbsp;Invite Utilly Invites&nbsp;</strong></span></a></h2>
     <h3 style="text-align: center;">Suggestions for Utilly Invites bots? Leave them here</h3>
-    <p style="text-align: left;"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSel9Q1Ut_kJhm7RINztTFejWJuoNnmnLuj2MF7JNDJxozfxuQ/viewform?embedded=true" width="1000" height="1000" frameborder="0">Laden…</iframe></p>
+   
     <table style="width: 100%;">
         <tbody>
             <tr>
@@ -30,6 +30,7 @@
             </tr>
         </tbody>
     </table>
+     <p style="box-sizing: inherit; margin: 0px 0px 1em; padding: 0px; color: rgb(74, 74, 74); font-family: Karla, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 600; letter-spacing: normal; orphans: 2; text-align: center; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;"><strong style="box-sizing: inherit; color: rgb(54, 54, 54); font-weight: 700;"><span style="font-family: Arial, Helvetica, sans-serif;">Have suggestions for bots? Click <a href="https://forms.gle/oeR6y5xiRAhREMQM7" rel="noopener noreferrer" style="box-sizing: inherit; color: rgb(50, 115, 220); cursor: pointer; text-decoration: none;" target="_blank">here</a>!</span></strong></p>
 </body>
 
 </html>
