--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </tr>
             
     <tr>
-      <td class="zebra wtf">&gt;slowmode {amount}</td>
+      <td class="zebra">&gt;slowmode {amount}</td>
       <td class="zebra">Sets the slowmode to {amount} seconds, 0 to turn it off</td>
       <td class="zebra">manage_channels</td>
     </tr>
